versioned_docs/version-1.10/samples/java.mdx
---
title: Getting Started on Okteto with Java
description: This tutorial will show you how to develop a Java sample application
sidebar_label: Java
id: java
---

import Image from "@theme/Image";

Okteto is a platform that simplifies the process of launching cloud development environments without requiring the expertise to do this yourself. This enables developers to automatically spin up fully-managed development environments that emulate production as closely as possible. Okteto eliminates the friction of local development environments, the many deviations that can exist for the same engineering organization, and the troubleshooting that comes with them.

This tutorial will show you how to develop and debug a Java sample application with Okteto.

## Prerequisites

Install the latest version of the Okteto CLI and configure it to access Okteto. [Follow our getting started guide](getting-started.mdx) if you haven't done it yet.

## Step 1: Deploy the Java Sample App

Get a local version of the Java Sample App by executing the following commands:

#### Maven

```console
$ git clone https://github.com/okteto/java-maven-getting-started
$ cd java-maven-getting-started
```

#### Gradle

```console
$ git clone https://github.com/okteto/java-gradle-getting-started
$ cd java-gradle-getting-started
```

At the root of the directory, you'll find the `okteto.yaml` file. This describes how to [build](reference/manifest.mdx#build-object-optional), [deploy](reference/manifest.mdx#deploy-string-optional), and [develop](reference/manifest.mdx#develop-string-optional) the Java Sample App.

#### Maven

```
build:
  hello-world:
    image: okteto.dev/java-maven-hello-world:1.0.0
    context: .
deploy:
  - kubectl apply -f k8s.yml
```

#### Gradle

```
build:
  hello-world:
    image: okteto.dev/java-gradle-hello-world:1.0.0
    context: .
deploy:
  - kubectl apply -f k8s.yml
```

Deploy your development environment by executing:

```console
$ okteto deploy --build
```

#### Maven

```console
 i  Using cindy @ cloud.okteto.com as context
 i  Building image for service 'hello-world'
 i  Building the image 'okteto.dev/java-maven-hello-world:1.0.0' in tcp://buildkit.cloud.okteto.net:1234...
[+] Building 5.9s (11/11) FINISHED
 ...
 ✓  Image 'registry.cloud.okteto.net/cindy/java-maven-hello-world:1.0.0' successfully pushed
 i  Running kubectl apply -f k8s.yml
deployment.apps/hello-world created
service/hello-world created
ingress.networking.k8s.io/hello-world created
 ✓  Development environment 'java-maven-getting-started' successfully deployed
 i  Run 'okteto up' to activate your development container
```

#### Gradle

```console
 i  Using cindy @ cloud.okteto.com as context
 i  Building image for service 'hello-world'
 i  Building the image 'okteto.dev/java-gradle-hello-world:1.0.0' in tcp://buildkit.cloud.okteto.net:1234...
[+] Building 5.9s (11/11) FINISHED
 ...
 ✓  Image 'registry.cloud.okteto.net/cindy/java-gradle-hello-world:1.0.0' successfully pushed
 i  Running kubectl apply -f k8s.yml
deployment.apps/hello-world created
service/hello-world created
ingress.networking.k8s.io/hello-world created
 ✓  Development environment 'java-gradle-getting-started' successfully deployed
 i  Run 'okteto up' to activate your development container
```

Log into your Okteto instance and click on the URL of the application:

<Image
  src={require("@site/static/img/okteto-ui.png").default}
  alt="Okteto UI Java"
  width="850"
/>

Did you notice that you're accessing your application through an HTTPs endpoint? This is because Okteto will [automatically create them](cloud/ssl.mdx) for you when you deploy your application. Cool no 😎?

## Step 2: Activate your development container

The [dev](reference/manifest.mdx#dev-object-optional) section defines how to activate a development container for the Java Sample App

#### Maven

```
dev:
  hello-world:
    image: okteto/maven:3
    command: bash
    sync:
      - .:/usr/src/app
    forward:
      - 5005:5005
    volumes:
      - /root/.m2
```

#### Gradle

```
dev:
  hello-world:
    image: okteto/gradle:6.5
    command: bash
    sync:
      - .:/usr/src/app
    forward:
      - 5005:5005
    volumes:
      - /home/gradle/.gradle
```

The `hello-world` key matches the name of the hello world Deployment. The meaning of the rest of fields is:

- `image`: the image used by the development container. More information on development images [here](reference/development-environments.mdx)
- `command`: the start command of the development container
- `sync`: the folders that will be synchronized between your local machine and the development container
- `forward`: a list of ports to forward from your development container
- `volumes`: a list of paths in your development container to be mounted as persistent volumes. This is useful to persist the maven/gradle caches.

Also, note that there is a `.stignore` file to indicate which files shouldn't be synchronized to your development container.
This is useful to avoid synchronizing binaries, build artifacts, or git metadata.

## Step 3: Activate your development container

Next, execute the following command to activate your development container:

```console
$ okteto up
```

```console
 ✓  Persistent volume successfully attached
 ✓  Images successfully pulled
 ✓  Files synchronized
    Namespace: cindy
    Name:      hello-world
    Forward:   5005 -> 5005

Welcome to your development container. Happy coding!
cindy:hello-world app>
```

Working in your development container is the same as working on your local machine.
Start the application by running the following command:

#### Maven

```console
default:hello-world app> mvn spring-boot:run
```

#### Gradle

```console
default:hello-world app> gradle bootRun
```

The first time you run the application, Maven/Gradle will compile your application. Wait for this process to finish.

Go back to the browser and reload the page to test that your application is running.

## Step 4: Remote Development with Okteto

Open `src/main/java/com/okteto/helloworld/RestHelloWorld.java` in your favorite local IDE and modify the response message on line 11 to be _Hello world from Okteto!_. Save your changes.

```java
package com.okteto.helloworld;

import org.springframework.web.bind.annotation.GetMapping;
import org.springframework.web.bind.annotation.RestController;

@RestController
public class RestHelloWorld {

	@GetMapping("/")
	public String sayHello() {
		return "Hello world from Okteto!";
	}
}
```

Your IDE will auto compile only the necessary `*.class` files which will be synchronized by Okteto to your remote environment. Take a look at the development container shell and notice how the changes are detected by Spring Boot and automatically hot reloaded.

> Import the `spring-boot-devtools` dependency to automatically restart your Java application whenever a file is changed.

Go back to the browser and reload the page. Your code changes were instantly applied. No commit, build, or push required 😎!

## Step 5: Remote debugging with Okteto

Okteto enables you to debug your applications directly from your favorite IDE. Let's take a look at how that works in IntelliJ, one of the most popular IDEs for Java development.

> Add the following JVM arguments in the Gradle/Maven configuration files to enable remote debugging in your Java application:
>
> `-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005`

### Create the debug configuration on IntelliJ

1. From the main menu, select Run | Edit Configurations.
1. In the Run/Debug Configuration dialog, click + on the toolbar or press `⌘ N`. The list shows the run/debug configuration templates. Select Remote JVM Debug.
1. Specify the run/debug configuration name in the Name field. This name will be shown in the list of the available run/debug configurations.
1. In the Configuration section, specify the parameters listed below:
   - Debugger Mode: `Attach to remote JVM`
   - Host: `localhost`
   - Port: `5005` (this should match the port forwared on your Okteto manifest file)
   - Command line arguments for remote JVM: `-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005`
1. Apply the changes and close the dialog.

<Image
  src={require("@site/static/img/java-debug.png").default}
  alt="debugging in Okteto with Java"
  width="850"
/>

### Start the remote debugging session

Select the debug action you just added, and click on the debug button to start the remote debugging session.

Add a breakpoint on `src/main/java/es/okteto/helloworld/RestHelloWorld.java`, line 11. Go back to the browser and reload the page. The execution will halt at your breakpoint. You can then inspect the request, the available variables, etc...

<Image
  src={require("@site/static/img/java-halt.png").default}
  alt="breakpoint in Java"
  width="850"
/>

Your code is executing in your remote development environment, but you can debug it from your local machine without any extra services or tools. Pretty cool no? 😉

## Next steps

Congratulations, you just developed **your first application with Okteto** 🚀.

> Okteto lets you develop your applications directly on Kubernetes. This way you can:
>
> - Eliminate integration issues by developing in a realistic environment
> - Test your application end to end as fast as you type code
> - No more CPU cycles wasted in your machine. Develop at the speed of the cloud!

Find more advanced samples with Okteto in [this repository](https://github.com/okteto/samples) or [join our community](https://community.okteto.com) to ask questions and share your feedback.
